name:                liquid-fixpoint
version:             0.6
Copyright:           2010-15 Ranjit Jhala, University of California, San Diego.
synopsis:            Predicate Abstraction-based Horn-Clause/Implication Constraint Solver
homepage:            https://github.com/ucsd-progsys/liquid-fixpoint
license:             BSD3
license-file:        LICENSE
author:              Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10


description:     This package is a Haskell wrapper to the SMTLIB-based
                 Horn-Clause/Logical Implication constraint solver used
                 for Liquid Types.
                 .
                 The package includes:
                 .
                 1. Types for Expressions, Predicates, Constraints, Solutions
                 .
                 2. Code for serializing the above
                 .
                 3. Code for parsing the results from the fixpoint binary
                 .
                 Requirements
                 .
                 In addition to the .cabal dependencies you require
                 .
                 - A Z3 (<http://z3.codeplex.com>) or CVC4 (<http://cvc4.cs.nyu.edu>) binary.
                   If on Windows, please make sure to place the binary and any associated DLLs
                   in your "cabal/bin" folder, right next to the fixpoint.native.exe binary.

Extra-Source-Files: tests/neg/*.fq
                  , tests/pos/*.fq

Source-Repository head
  Type:        git
  Location:    https://github.com/ucsd-progsys/liquid-fixpoint/

Executable fixpoint
  default-language: Haskell98
  Main-is:       Fixpoint.hs
  ghc-options:   -threaded
  hs-source-dirs: bin
  Build-Depends: base >= 4.7 && < 5
               , liquid-fixpoint

Library
  default-language: Haskell98
  hs-source-dirs:  src
  Exposed-Modules: Language.Fixpoint.Types.Names,
                   Language.Fixpoint.Types.Errors,
                   Language.Fixpoint.Types.Config,
                   Language.Fixpoint.Types.Visitor,
                   Language.Fixpoint.Types.PrettyPrint,
                   Language.Fixpoint.Types.Spans,
                   Language.Fixpoint.Types.Sorts,
                   Language.Fixpoint.Types.Refinements,
                   Language.Fixpoint.Types.Substitutions,
                   Language.Fixpoint.Types.Environments,
                   Language.Fixpoint.Types.Constraints,
                   Language.Fixpoint.Types,
                   Language.Fixpoint.Smt.Types,
                   Language.Fixpoint.Smt.Bitvector,
                   Language.Fixpoint.Smt.Theories,
                   Language.Fixpoint.Smt.Serialize,
                   Language.Fixpoint.Smt.Interface,
                   Language.Fixpoint.Partition,
                   Language.Fixpoint.Solver,
                   Language.Fixpoint.Parse,
                   Language.Fixpoint.SortCheck,
                   Language.Fixpoint.Misc,
                   Language.Fixpoint.Utils.Progress,
                   Language.Fixpoint.Utils.Files,
                   Language.Fixpoint.Solver.Types,
                   Language.Fixpoint.Solver.Graph,
                   Language.Fixpoint.Solver.Solution,
                   Language.Fixpoint.Solver.Worklist,
                   Language.Fixpoint.Solver.Monad,
                   Language.Fixpoint.Solver.Deps,
                   Language.Fixpoint.Solver.TrivialSort,
                   Language.Fixpoint.Solver.UniqifyKVars,
                   Language.Fixpoint.Solver.UniqifyBinds,
                   Language.Fixpoint.Solver.Eliminate,
                   Language.Fixpoint.Solver.Validate,
                   Language.Fixpoint.Utils.Statistics,
                   Language.Fixpoint.Solver.Solve

  Build-Depends: base >= 4.7 && < 5
               , array
               , async
               , attoparsec
               , syb
               , cmdargs
               , ansi-terminal
               , ascii-progress >= 0.3
               , bifunctors
               , binary
               , bytestring
               , containers
               , deepseq
               , directory
               , filemanip
               , filepath
               , ghc-prim
               , intern
               , mtl
               , parsec
               , pretty
               , boxes
               , parallel
               , process
               , syb
               , text
               , transformers
               , hashable
               , unordered-containers
               , cereal
               , text-format
  if impl(ghc >= 7.10.2)
    Build-Depends: located-base

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -O2 -threaded
  main-is:          test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty >= 0.10,
                    tasty-hunit,
                    tasty-rerun >= 1.1,
                    text
