Name:                liquidtypes 
Version:             0.1
Copyright:           2010-13 Ranjit Jhala, University of California, San Diego.
build-type:          Simple
Synopsis:            Liquid Types for Haskell 
Description:         Liquid Types for Haskell.
License:             GPL
License-file:        LICENSE
Author:              Ranjit Jhala
Maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
Category:            Language
Build-Type:          Simple
Cabal-version:       >=1.8

Executable liquid 
  Build-Depends: base
               , ghc==7.6.3
               , ansi-terminal
               , bifunctors
               , cmdargs
               , containers
               , deepseq
               , directory
               , filemanip
               , filepath
               , ghc-paths
               , hscolour
               , mtl
               , parsec
               , pretty
               , process
               , syb
               , text
               , vector
               , liquid-fixpoint
               , hashable<1.2
               , unordered-containers
               , aeson
               , bytestring

  Main-is: Liquid.hs
  --ghc-options: -O -W
  Extensions: 

Library
  Build-Depends: base
               , ghc==7.6.3
               , ansi-terminal
               , bifunctors
               , cmdargs
               , containers
               , deepseq
               , directory
               , filemanip
               , filepath
               , ghc-paths
               , hscolour
               , mtl
               , parsec
               , pretty
               , process
               , syb
               , text
               , vector
               , hashable<1.2
               , unordered-containers
               , liquid-fixpoint
               , aeson
               , bytestring

  hs-source-dirs:  include, .

  Exposed-Modules: Language.Haskell.Liquid.Prelude,
                   Language.Haskell.Liquid.List, 
                   Language.Haskell.Liquid.PrettyPrint, 
                   Language.Haskell.Liquid.Bare,
                   Language.Haskell.Liquid.Constraint, 
                   Language.Haskell.Liquid.Measure, 
                   Language.Haskell.Liquid.Parse, 
                   Language.Haskell.Liquid.GhcInterface, 
                   Language.Haskell.Liquid.RefType, 
                   Language.Haskell.Liquid.PredType, 
                   Language.Haskell.Liquid.Predicates, 
                   Language.Haskell.Liquid.ACSS, 
                   Language.Haskell.Liquid.ANFTransform, 
                   Language.Haskell.Liquid.Annotate, 
                   Language.Haskell.Liquid.CTags, 
                   Language.Haskell.Liquid.CmdLine, 
                   Language.Haskell.Liquid.GhcMisc, 
                   Language.Haskell.Liquid.Qualifier, 
                   Language.Haskell.Liquid.TransformRec, 
                   Language.Haskell.Liquid.Tidy, 
                   Language.Haskell.Liquid.Types

  other-modules:   Language.Haskell.Liquid.Desugar.Desugar
                   Language.Haskell.Liquid.Desugar.DsExpr,
                   Language.Haskell.Liquid.Desugar.DsListComp,
                   Language.Haskell.Liquid.Desugar.MatchCon,
                   Language.Haskell.Liquid.Desugar.MatchLit,
                   Language.Haskell.Liquid.Desugar.DsArrows,
                   Language.Haskell.Liquid.Desugar.DsUtils,
                   Language.Haskell.Liquid.Desugar.Match,
                   Language.Haskell.Liquid.Desugar.DsBinds,
                   Language.Haskell.Liquid.Desugar.DsGRHSs,
                   Language.Haskell.Liquid.Desugar.HscMain
  --ghc-options: -O -W
  Extensions: 


