Name:                liquidtypes 
Version:             0.1
Copyright:           2010-13 Ranjit Jhala, University of California, San Diego.
build-type:          Simple
Synopsis:            Liquid Types for Haskell 
Description:         Liquid Types for Haskell.
License:             GPL
License-file:        LICENSE
Author:              Ranjit Jhala
Maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
Category:            Language
Build-Type:          Simple
Cabal-version:       >=1.8

Executable liquid 
  Build-Depends: base
               , ghc==7.6.3
               , ansi-terminal
               , bifunctors
               , cmdargs
               , containers
               , deepseq
               , directory
               , Diff
               , filemanip
               , filepath
               , ghc-paths
               , hscolour
               , mtl
               , parsec
               , pretty
               , process
               , syb
               , text
               , vector
               , liquid-fixpoint
               , hashable<1.2
               , unordered-containers
               , aeson
               , bytestring
               -- , liquidtypes

  Main-is: Liquid.hs
  --ghc-options: -O -W
  Extensions: 

-- NOLIB Library
-- NOLIB   Build-Depends: base
-- NOLIB                , ghc==7.6.3
-- NOLIB                , ansi-terminal
-- NOLIB                , bifunctors
-- NOLIB                , cmdargs
-- NOLIB                , containers
-- NOLIB                , deepseq
-- NOLIB                , directory
-- NOLIB                , Diff
-- NOLIB                , filemanip
-- NOLIB                , filepath
-- NOLIB                , ghc-paths
-- NOLIB                , hscolour
-- NOLIB                , mtl
-- NOLIB                , parsec
-- NOLIB                , pretty
-- NOLIB                , process
-- NOLIB                , syb
-- NOLIB                , text
-- NOLIB                , vector
-- NOLIB                , hashable<1.2
-- NOLIB                , unordered-containers
-- NOLIB                , liquid-fixpoint
-- NOLIB                , aeson
-- NOLIB                , bytestring
-- NOLIB 
-- NOLIB   hs-source-dirs:  include, .
-- NOLIB 
-- NOLIB   Exposed-Modules: Language.Haskell.Liquid.Prelude,
-- NOLIB                    Language.Haskell.Liquid.List, 
-- NOLIB                    Language.Haskell.Liquid.PrettyPrint, 
-- NOLIB                    Language.Haskell.Liquid.Bare,
-- NOLIB                    Language.Haskell.Liquid.Constraint, 
-- NOLIB                    Language.Haskell.Liquid.Measure, 
-- NOLIB                    Language.Haskell.Liquid.Parse, 
-- NOLIB                    Language.Haskell.Liquid.GhcInterface, 
-- NOLIB                    Language.Haskell.Liquid.RefType, 
-- NOLIB                    Language.Haskell.Liquid.PredType, 
-- NOLIB                    Language.Haskell.Liquid.Predicates, 
-- NOLIB                    Language.Haskell.Liquid.ACSS, 
-- NOLIB                    Language.Haskell.Liquid.DiffCheck, 
-- NOLIB                    Language.Haskell.Liquid.ANFTransform, 
-- NOLIB                    Language.Haskell.Liquid.Annotate, 
-- NOLIB                    Language.Haskell.Liquid.CTags, 
-- NOLIB                    Language.Haskell.Liquid.CmdLine, 
-- NOLIB                    Language.Haskell.Liquid.GhcMisc, 
-- NOLIB                    Language.Haskell.Liquid.Misc, 
-- NOLIB                    Language.Haskell.Liquid.Qualifier, 
-- NOLIB                    Language.Haskell.Liquid.TransformRec, 
-- NOLIB                    Language.Haskell.Liquid.Tidy, 
-- NOLIB                    Language.Haskell.Liquid.Types
-- NOLIB                    Language.Haskell.Liquid.Fresh
-- NOLIB 
-- NOLIB   other-modules:   Language.Haskell.Liquid.Desugar.Desugar
-- NOLIB                    Language.Haskell.Liquid.Desugar.DsExpr,
-- NOLIB                    Language.Haskell.Liquid.Desugar.DsListComp,
-- NOLIB                    Language.Haskell.Liquid.Desugar.MatchCon,
-- NOLIB                    Language.Haskell.Liquid.Desugar.MatchLit,
-- NOLIB                    Language.Haskell.Liquid.Desugar.DsArrows,
-- NOLIB                    Language.Haskell.Liquid.Desugar.DsUtils,
-- NOLIB                    Language.Haskell.Liquid.Desugar.Match,
-- NOLIB                    Language.Haskell.Liquid.Desugar.DsBinds,
-- NOLIB                    Language.Haskell.Liquid.Desugar.DsGRHSs,
-- NOLIB                    Language.Haskell.Liquid.Desugar.HscMain
-- NOLIB   --ghc-options: -O -W
-- NOLIB   Extensions: 


